DT-1496 Fixes menu overflow

--- a/src/client/components/lender-match/lender-match.scss
+++ b/src/client/components/lender-match/lender-match.scss
@@ -1,9 +1,3 @@
-@media (max-width: 767px) {
-    body {
-        margin-top: 16vw;
-    }
-}
-
 //LINC BUTTONS
 .backBtn{
   width: 140px;
