--- a/src/client/styles/success-page/counseling-and-tools.scss
+++ b/src/client/styles/success-page/counseling-and-tools.scss
@@ -1,10 +1,5 @@
 @import "../buttons";
 @import "../atoms/grid";
-body {
-    font-family: 'Source Sans Pro', 'sans-serif';
-    color: #333333;
-    line-height: 1.2;
-}
 
 .section {
     width: 84vw;
